--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
 <body>
     
     <div class="app-container" id="app">
-        
-        <div class="week-filter-btns-cont">
-            <button class="week-btn active">All</button>
-            <button class="week-btn">Week 1: 27/10-02/11</button>
-        </div>
+
     </div>
 
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
-    <!-- <script type="module" src="js/app.js"></script> -->
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
